--- a/Homepage.html
+++ b/Homepage.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+
 <head>
     <title>Aumad Coming Soon</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="css">
 </head>
+
 <body>
     <header>
-        <h1>Your Search Ends Soon!</h1>
+        <div class = 'search'>
+            <h1>Your Search Ends Soon!</h1>
+        </div>
     </header>
 </body>
