--- a/Homepage.html
+++ b/Homepage.html
@@ -3,12 +3,20 @@
 <head>
     <title>Aumad Coming Soon</title>
     <link href="style.css" rel="stylesheet" type="css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div class = 'search'>
-            <h1>Your Search Ends Soon!</h1>
+        <div class="Shortly">
+            <p>One Stop Modest Fashion Outlet for everyone.</p>
+            <h1>Your Search Ends Shortly!</h1>
+            <hr>
+            <p class="launch"></p>
         </div>
     </header>
+</body>
+
+<body>
+    <script src="index.js"></script>
 </body>
