--- a/Homepage.html
+++ b/Homepage.html
@@ -12,7 +12,7 @@
             <p>One Stop Modest Fashion Outlet for everyone.</p>
             <h1>Your Search Ends Shortly!</h1>
             <hr>
-            <p class="launch"></p>
+            <p id="launch"></p>
         </div>
     </header>
 </body>
