--- a/Homepage.html
+++ b/Homepage.html
@@ -2,14 +2,14 @@
 
 <head>
     <title>Aumad Coming Soon</title>
-    <link href="style.css" rel="stylesheet" type="css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"  />
 </head>
 
 <body>
     <header>
         <div class="Shortly">
-            <p>One Stop Modest Fashion Outlet for everyone.</p>
+            <p class="paragraph">One Stop Modest Fashion Outlet for everyone.</p>
             <h1>Your Search Ends Shortly!</h1>
             <hr>
             <p id="launch"></p>
