--- a/Homepage.html
+++ b/Homepage.html
@@ -12,7 +12,21 @@
             <p class="paragraph">One Stop Modest Fashion Outlet for everyone.</p>
             <h1>Your Search Ends Shortly!</h1>
             <hr>
-            <p id="launch"></p>
+            <div class="container">
+                <div id="countdown">
+                  <ul>
+                    <li><span id="days"></span>days</li>
+                    <li><span id="hours"></span>Hours</li>
+                    <li><span id="minutes"></span>Minutes</li>
+                    <li><span id="seconds"></span>Seconds</li>
+                  </ul>
+                </div>
+                <div id="content" class="emoji">
+                  <span>🧦</span>
+                  <span>👚</span>
+                  <span>👗</span>
+                </div>
+            </div>
         </div>
     </header>
 </body>
@@ -20,3 +34,4 @@
 <body>
     <script src="index.js"></script>
 </body>
+
